--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -1,12 +1,12 @@
 {
   "lang": "zh",
-  "start": "开始游戏",
+  "start": "开始扫地",
   "normal": "普通模式",
-  "endless": "无尽模式",
-  "practice": "练习模式",
+  "endless": "田哥无尽扫",
+  "practice": "牛头手把手教你扫",
   "settings": "游戏设置",
-  "img-before": "点击前图",
-  "img-after": "点击后图",
+  "img-before": "给田哥换皮肤",
+  "img-after": "给牛头换皮肤",
   "sound-on": "音效: 开启",
   "sound-off": "音效: 关闭",
   "title": "标题",
@@ -15,12 +15,12 @@
   "ok": "确定",
   "name": "名字",
   "comment": "留言",
-  "eat-kano": "吃掉小鹿乃",
+  "eat-kano": "吃掉小菜牛",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
-  "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "game-title": "来给菜牛扣奖金",
+  "game-intro1": "从一楼开始扫",
+  "game-intro2": "看你能扣多少分",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
@@ -31,22 +31,22 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "出去，这里是课！",
+  "text-level-2": "中午谁拖地？",
+  "text-level-3": "垃圾袋又没辣？",
+  "text-level-4": "来，六国论",
+  "text-level-5": "你zen棒！",
   "time-over": "倒计时多了",
-  "rank-title": "吃掉小鹿乃-排行榜",
+  "rank-title": "吃掉小菜牛-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉小鹿乃-排行榜",
-  "daily-ranking": "日榜",
-  "weekly-ranking": "周榜",
-  "monthly-ranking": "月榜",
+  "navbar-brand": "吃掉小菜牛-排行榜",
+  "daily-ranking": "每日一练",
+  "weekly-ranking": "周周清",
+  "monthly-ranking": "月考",
   "all-ranking": "总榜",
   "source-code": "源码",
   "query-input": "要查询的名字",
@@ -55,5 +55,5 @@
   "no-message": "这个人很懒什么也没留下",
   "self-record": "{name} 的最高记录. 已上传 {attempts} 次<br/>SCORE:{score} {time}",
   "no-self-record": "没有找到 {name} 的记录(或被过滤)",
-  "no-name-tip": "提示：你玩之前还没有填名字"
+  "no-name-tip": "提示：你作业没写名"
 }
