--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -25,10 +25,10 @@
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
   "calculating": "计算中",
-  "score": "得分",
-  "best": "最佳",
-  "again": "重来",
-  "home": "主页",
+  "score": "你扣的分",
+  "best": "曾经的辉煌",
+  "again": "复读",
+  "home": "回家",
   "rank": "排行",
   "repo": "仓库",
   "text-level-1": "出去，这里是课！",
